--- a/.github/workflows/bdd.yaml
+++ b/.github/workflows/bdd.yaml
@@ -27,13 +27,14 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
 
-      - name: build-push
-        run: |
-          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-          HEAD=$(git rev-parse --short HEAD)
-          IMG=keikoproj/instance-manager:$HEAD
-          make docker-build
-          echo "Pushing tag $HEAD"
+      - name: docker-build
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: keikoproj/instance-manager-test
+          tag_with_ref: true
+          tag_with_sha: true
 
       # - name: test
       #   run: |
