--- a/.github/workflows/bdd.yaml
+++ b/.github/workflows/bdd.yaml
@@ -33,13 +33,23 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: keikoproj/instance-manager-test
-          tag_with_ref: true
           tag_with_sha: true
 
-      # - name: test
-      #   run: |
-      #     export SECURITY_GROUPS=$(aws cloudformation describe-stacks --stack-name nightly-eks-node-security-group --query "Stacks[0].Outputs[?OutputKey=='SecurityGroup'].OutputValue" --output text)
-      #     aws eks update-kubeconfig --name $EKS_CLUSTER
-      #     make install
-      #     kubectl set image -n instance-manager deployment/instance-manager instance-manager=keikoproj/instance-manager:master
-      #     make bdd
+      - name: test
+
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          NODE_SUBNETS: ${{ secrets.NODE_SUBNETS }}
+          NODE_ROLE: ${{ secrets.NODE_ROLE }}
+        run: |
+          HEAD=$(git rev-parse --short HEAD)
+          export SECURITY_GROUPS=$(aws cloudformation describe-stacks --stack-name nightly-eks-node-security-group --query "Stacks[0].Outputs[?OutputKey=='SecurityGroup'].OutputValue" --output text)
+          export AMI_ID=ami-076c743acc3ec4159
+          export AWS_REGION=us-west-2
+          export KEYPAIR_NAME=instancemgr-bdd
+
+          aws eks update-kubeconfig --name instancemgr-eks-nightly
+          make install
+          kubectl set image -n instance-manager deployment/instance-manager instance-manager=keikoproj/instance-manager-test:sha-$HEAD
+          make bdd
