--- a/.github/workflows/bdd.yaml
+++ b/.github/workflows/bdd.yaml
@@ -4,7 +4,7 @@ on:
     types: [created, edited, deleted]
 jobs:
   functional-test:
-    if: contains(github.event.comment.html_url, '/pull/') && contains(github.event.comment.body, '/ok-to-test')
+    if: contains(github.event.comment.html_url, '/pull/') && contains(github.event.comment.body, 'ok-to-test')
     runs-on: [ubuntu-latest]
     steps:
       - name: setup
