--- a/.github/workflows/bdd.yaml
+++ b/.github/workflows/bdd.yaml
@@ -11,7 +11,7 @@ jobs:
       - uses: khan/pull-request-comment-trigger@master
         id: check
         with:
-          trigger: '@ok-to-test'
+          trigger: 'ok-to-test'
           reaction: rocket
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
